--- a/css/main.css
+++ b/css/main.css
@@ -12,25 +12,33 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
 
-  font-family: Georgia, serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-.img-flex {
-  display: block;
-  width: 100%;
+.card-1 {
+  background-color: #e97065;
 }
 
-a {
-  color: currentColor;
+.card-2 {
+  background-color: #fbd25e;
 }
 
-.card {
-  overflow: hidden;
+.card-3 {
+  background-color: #e86033;
+}
 
-  background-color: #d9ccaa;
-  border-radius: 6px;
+.title-1 {
+  font-family: "Rammetto One", cursive;
+}
+
+.title-2 {
+  font-family: "Gravitas One", cursive;
+}
+
+.title-3 {
+  font-family: 'Comfortaa', cursive;
 }
