--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,16 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
 
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+ body {
+   margin: 0;
+ }
 
 .card-1 {
   background-color: #e97065;
@@ -40,5 +44,5 @@ html {
 }
 
 .title-3 {
-  font-family: 'Comfortaa', cursive;
+  font-family: Comfortaa, cursive;
 }
