--- a/css/main.css
+++ b/css/main.css
@@ -23,15 +23,15 @@ body {
   margin: 0;
 }
 
-.card-1 {
+.watermelon {
   background-color: #e97065;
 }
 
-.card-2 {
+.starfruit {
   background-color: #fbd25e;
 }
 
-.card-3 {
+.persimmon {
   background-color: #e86033;
 }
 
